--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,65 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>Registration Form</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="./index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="./resources/brains.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
     <div class="header">
-       <span class="heading">User Registration</span> 
+        <span class="heading">User Registration</span>
     </div>
     <div class="container">
-        <div class="row">
-            
-        </div>
+        <br>
         <div class="row">
             <div class="col-lg-3">
             </div>
             <div class="col-lg-6">
                 <div class="ui background">
-                    <form class="form-group" action="./resources/connector.php" method="POST">
+                    <form class="form-group">
                         <div class="row">
                             <div class="col-lg-6">
                                 <label>First Name</label>
-                                <input class="form-control" type="text" name="fname" placeholder="Enter your First Name"
-                                    required minlength="4" />
+                                <input class="form-control" type="text" name="fname" id="fname"
+                                    placeholder="Enter your First Name" required minlength="4" />
                             </div>
                             <div class="col-lg-6">
                                 <label class="primary-text">Last Name</label>
-                                <input class="form-control" type="text" name="lname" placeholder="Enter your Last Name"
-                                    required minlength="4" />
+                                <input class="form-control" type="text" name="lname" id="lname"
+                                    placeholder="Enter your Last Name" required minlength="4" />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <label>Email</label>
-                                <input class="form-control" type="email" name="email" placeholder="Enter your email"
-                                    required />
+                                <input class="form-control" type="email" name="email" id="email"
+                                    placeholder="Enter your email" required />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <label>Password</label>
-                                <input class="form-control" type="password" name="pwd" placeholder="Enter your password"
-                                    required minlength="4" />
+                                <input class="form-control" type="password" name="pwd" id="pwd"
+                                    placeholder="Enter your password" required minlength="4" />
                             </div>
                             <div class="col-lg-6">
                                 <label class="primary-text">Confirm Password</label>
-                                <input class="form-control" type="password" name="conpwd" placeholder="Retype password"
-                                    required minlength="4" />
+                                <input class="form-control" type="password" name="conpwd" id="conpwd"
+                                    placeholder="Retype password" required minlength="4" />
                             </div>
 
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <label>Choose Gender</label>
-                                <select class="form-control" name="gender">
+                                <select class="form-control" name="gender" id="gender">
                                     <option value="Male">Male</option>
                                     <option value="Female">Female</option>
                                     <option value="Others">Others</option>
@@ -75,9 +75,20 @@
                         <div class="row">
                             <div class="col-lg-3"></div>
                             <div class="col-lg-6">
-                            <input type="submit" class="btn btn-primary submit" name="submit" value="Submit">
+                                <button class="btn btn-primary submit" name="submit" onclick="sendData()">
+                                    SUBMIT
+                                    </button>
+                            </div>
+
                         </div>
-                    </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-lg-12 text-center icon">
+                                <i class="material-icons ">people_alt</i>
+                                Registered Users
+                            </div>
+                        </div>
+
                     </form>
                 </div>
             </div>
@@ -86,4 +97,5 @@
         </div>
     </div>
 </body>
+
 </html>
